# LABS

./: CMakeLists.txt
LAB_1/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  header_7.h  task_1.c  task_2.c  task_3.c  task_4.c  task_5_f.c  task_5_m.c  task_6_f.c  task_6_m.c  task_7_f.c  task_7_m.c
LAB_1/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
LAB_1/LAB_1.xcodeproj/: project.pbxproj
LAB_1/Project.xcodeproj/: project.pbxproj
LAB_2/LAB_2/: CMakeCache.txt  CMakeLists.txt  Header_2.h  cmake_install.cmake  main_2.c  task1_2.c  task2_2.c
LAB_2/LAB_2.xcodeproj/: project.pbxproj
LAB_3_Do/LAB_3_Do/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main_do.c  task1_do.c  task2_do.c  task3_do.c  task4_do.c  task5_do.c
LAB_3_Do/LAB_3_Do.xcodeproj/: project.pbxproj
LAB_3_Do_While/LAB_3_Do_While/: CMakeCache.txt  CMakeLists.txt  Task1_Do_While.c  Task2_Do_While.c  Task3_Do_While.c  Task4_Do_while.c  Task5_Do_While.c  cmake_install.cmake  header_do_while.h  main_Do_While.c
LAB_3_Do_While/LAB_3_Do_While.xcodeproj/: project.pbxproj
LAB_3_For/LAB_3_For/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  header_for.h  main_For.c  task1_For.c  task2_For.c  task3_For.c  task4_for.c  task5_For.c
LAB_3_For/LAB_3_For.xcodeproj/: project.pbxproj
LAB_4/LAB_4/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.c
LAB_4/LAB_4.xcodeproj/: project.pbxproj
LAB_5/LAB_5/: CMakeCache.txt  CMakeLists.txt  (+2 more)
LAB_5/LAB_5.xcodeproj/: project.pbxproj
(+102 files in other folders)
