cmake_minimum_required (VERSION 3.14.0)

project("Practice")

add_subdirectory("LAB_1")
add_subdirectory("LAB_2/LAB_2")
add_subdirectory("LAB_3_Do/LAB_3_Do")
add_subdirectory("LAB_3_Do_While/LAB_3_Do_While")
add_subdirectory("LAB_3_For/LAB_3_For")
add_subdirectory("LAB_4/LAB_4")
add_subdirectory("LAB_5/LAB_5")
add_subdirectory("LAB_6/LAB_6")
add_subdirectory("LAB_7/LAB_7")
